[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "packnow"
version = "1.6"
description = "Pack everything, now."
keywords = ["pack", "packing", "packnow"]
authors = [
  { name = "AWeirdDev", email = "aweirdscratcher@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
  "termcolor", 
  "fastapi", 
  "questionary", 
  "websockets", 
  "uvicorn",
]

[project.scripts]
packnow = "packnow.main:main"

[project.urls]
"Homepage" = "https://github.com/AWeirdScratcher/packnow"
"Bug Tracker" = "https://github.com/AWeirdScratcher/packnow/issues"
